--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Scripts -->
     <script src="script.js" defer></script>
     
-    <title>Portfolio for Your Name</title>
+    <title>Portfolio for Perry Ritter</title>
 </head>
 <body>
 
@@ -27,26 +27,26 @@
 
     <!-- Thumbnail -->
     <figure>
-        <h2>Title</h2>
-        <img class="thumbnail" id="one" src="img/placeholder.png" alt="Thumbnail">
+        <h2>Stickers</h2>
+        <img class="thumbnail" id="one" src="img/Sticker.png" alt="Thumbnail">
         <figcaption>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            This was a project for a class where I had to design and produce some stickers. I had some sketchs I had done so I illustrated them.
         </figcaption>
     </figure>
 
     <figure>
-        <h2>Title</h2>
-        <img class="thumbnail" id="two" src="img/placeholder.png" alt="Thumbnail">
+        <h2>Logo Samples</h2>
+        <img class="thumbnail" id="two" src="img/DucksUnlimitedLogoSample.jpg" alt="Thumbnail">
         <figcaption>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            This was a sample logo I created for a freind that wanted to start a Ducks Unlimited chapter here at eastern. 
         </figcaption>
     </figure>
 
     <figure>
-        <h2>Title</h2>
-        <img class="thumbnail" id="three" src="img/placeholder.png" alt="Thumbnail">
+        <h2>Branding</h2>
+        <img class="thumbnail" id="three" src="img/FinalLogos.jpg" alt="Thumbnail">
         <figcaption>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            This was a brand style guide I had to create for a gardening logo for a fellow classmates brand for a project this quarter. 
         </figcaption>
     </figure>
 
@@ -54,15 +54,15 @@
 
 <!-- fz  -->
 <dialog data-fz="one">
-    <img src="img/fullsize.png" alt="fullsize image">
+    <img src="img/Sticker.png" alt="fullsize image">
 </dialog>
 
 <dialog data-fz="two">
-    <img src="img/fullsize.png" alt="fullsize image">
+    <img src="img/DucksUnlimitedLogoSample.jpg" alt="fullsize image">
 </dialog>
 
 <dialog data-fz="three">
-    <img src="img/fullsize.png" alt="fullsize image">
+    <img src="img/FinalLogos.jpg" alt="fullsize image">
 </dialog>
 
 </body>
